@@ -2,6 +2,7 @@ package project.SangHyun.study.study.service.unit;
 
 
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -19,10 +20,8 @@ import project.SangHyun.study.study.enums.StudyRole;
 import project.SangHyun.study.study.enums.StudyState;
 import project.SangHyun.study.study.repository.StudyRepository;
 import project.SangHyun.study.study.service.impl.StudyServiceImpl;
-import project.SangHyun.study.studyboard.domain.StudyBoard;
+import project.SangHyun.study.study.tools.StudyFactory;
 import project.SangHyun.study.studyjoin.domain.StudyJoin;
-import project.SangHyun.study.studyjoin.dto.response.StudyFindMembersResponseDto;
-import project.SangHyun.study.studyjoin.repository.StudyJoinRepository;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -36,29 +35,30 @@ import static org.mockito.BDDMockito.willDoNothing;
 
 @ExtendWith(MockitoExtension.class)
 class StudyServiceUnitTest {
+    Member member;
+    Study study;
+
     @InjectMocks
     StudyServiceImpl studyService;
     @Mock
     StudyRepository studyRepository;
-    @Mock
-    StudyJoinRepository studyJoinRepository;
+
+    @BeforeEach
+    public void init() {
+        member = StudyFactory.makeTestAuthMember();
+        study = StudyFactory.makeTestStudy(member, new ArrayList<>(), new ArrayList<>());
+    }
 
     @Test
     @DisplayName("스터디를 생성한다.")
     public void createStudy() throws Exception {
         //given
-        Long memberId = 1L;
-        StudyCreateRequestDto requestDto = new StudyCreateRequestDto(memberId, "테스트 스터디", "백엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
-
-        Long studyId = 1L;
-        Study study = requestDto.toEntity();
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        StudyCreateResponseDto ExpectResult = StudyCreateResponseDto.create(study);
+        StudyCreateRequestDto requestDto = StudyFactory.makeCreateDto(member);
+        Study createdStudy = requestDto.toEntity();
+        StudyCreateResponseDto ExpectResult = StudyFactory.makeCreateResponseDto(createdStudy);
 
         //mocking
-        given(studyRepository.save(any())).willReturn(study);
+        given(studyRepository.save(any())).willReturn(createdStudy);
 
         //when
         StudyCreateResponseDto ActualResult = studyService.createStudy(requestDto);
@@ -73,18 +73,10 @@ class StudyServiceUnitTest {
     @DisplayName("모든 스터디 정보를 로드한다.")
     public void loadStudyInfo() throws Exception {
         //given
-        Long memberId = 1L;
-        StudyCreateRequestDto requestDto = new StudyCreateRequestDto(memberId, "테스트 스터디", "백엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
-
-        Long studyId = 1L;
-        Study study = requestDto.toEntity();
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        List<StudyFindResponseDto> ExpectResult = Arrays.asList(StudyFindResponseDto.create(study));
+        List<StudyFindResponseDto> ExpectResult = StudyFactory.makeFindAllResponseDto(study);
 
         //mocking
-        given(studyRepository.findAll()).willReturn(new ArrayList<>(Arrays.asList(study)));
+        given(studyRepository.findAll()).willReturn(List.of(study));
 
         //when
         List<StudyFindResponseDto> ActualResult = studyService.findAllStudies();
@@ -98,25 +90,16 @@ class StudyServiceUnitTest {
     @DisplayName("스터디에 대한 세부정보를 로드한다.")
     public void loadStudyDetail() throws Exception {
         //given
-        Long memberId = 1L;
-        StudyCreateRequestDto requestDto = new StudyCreateRequestDto(memberId, "테스트 스터디", "백엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
-
-        Long studyId = 1L;
-        Study study = requestDto.toEntity();
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        StudyFindResponseDto ExpectResult = StudyFindResponseDto.create(study);
+        StudyFindResponseDto ExpectResult = StudyFactory.makeFindResponseDto(study);
 
         //mocking
-        given(studyRepository.findStudyById(studyId)).willReturn(study);
+        given(studyRepository.findStudyById(study.getId())).willReturn(study);
 
         //when
-        StudyFindResponseDto ActualResult = studyService.findStudy(studyId);
+        StudyFindResponseDto ActualResult = studyService.findStudy(study.getId());
 
         //then
         Assertions.assertEquals(ExpectResult.getStudyId(), ActualResult.getStudyId());
-        Assertions.assertEquals(ExpectResult.getTitle(), ActualResult.getTitle());
         Assertions.assertEquals(ExpectResult.getHeadCount(), 2L);
     }
 
@@ -124,24 +107,13 @@ class StudyServiceUnitTest {
     @DisplayName("스터디의 정보를 업데이트한다.")
     public void updateStudy() throws Exception {
         //given
-        Long memberId = 1L;
-        StudyCreateRequestDto requestDto = new StudyCreateRequestDto(memberId, "테스트 스터디", "백엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
-
-        Long studyId = 1L;
-        Study study = requestDto.toEntity();
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        StudyJoin studyJoin = new StudyJoin(new Member(memberId), new Study(studyId), StudyRole.CREATOR);
-
-        StudyUpdateRequestDto updateRequestDto = new StudyUpdateRequestDto("테스트 스터디 변경", "프론트엔드",
-                null, 2L, StudyState.STUDYING, RecruitState.PROCEED);
+        StudyUpdateRequestDto updateRequestDto = StudyFactory.makeUpdateDto("테스트 스터디 변경", "프론트엔드");
 
         //mocking
-        given(studyRepository.findById(studyId)).willReturn(Optional.ofNullable(study));
+        given(studyRepository.findById(study.getId())).willReturn(Optional.ofNullable(study));
 
         //when
-        StudyUpdateResponseDto ActualResult = studyService.updateStudy(studyId, updateRequestDto);
+        StudyUpdateResponseDto ActualResult = studyService.updateStudy(study.getId(), updateRequestDto);
 
         //then
         Assertions.assertEquals("테스트 스터디 변경", ActualResult.getTitle());
@@ -152,21 +124,14 @@ class StudyServiceUnitTest {
     @DisplayName("스터디의 정보를 삭제한다.")
     public void deleteStudy() throws Exception {
         //given
-        Long memberId = 1L;
-        Long studyId = 1L;
-        Study study = new Study(1L);
-        ReflectionTestUtils.setField(study, "id", studyId);
-
-        StudyJoin studyJoin = new StudyJoin(new Member(memberId), new Study(studyId), StudyRole.CREATOR);
-
         StudyDeleteResponseDto ExpectResult = StudyDeleteResponseDto.create(study);
 
         //mocking
-        given(studyRepository.findById(studyId)).willReturn(Optional.ofNullable(study));
+        given(studyRepository.findById(study.getId())).willReturn(Optional.ofNullable(study));
         willDoNothing().given(studyRepository).delete(study);
 
         //when
-        StudyDeleteResponseDto ActualResult = studyService.deleteStudy(studyId);
+        StudyDeleteResponseDto ActualResult = studyService.deleteStudy(study.getId());
 
         //then
         Assertions.assertEquals(ExpectResult.getTitle(), ActualResult.getTitle());
